# Chess

./: CMakeLists.txt  Callback.cpp  Callback.h  Chess.cpp  Chess.h  ChessSet.cpp  ChessSet.h  ConsoleApp.cpp  ConsoleApp.h  Gui.cpp  Gui.h  IllegalMove.h  Player.cpp  Player.h  Position.cpp  Position.h  Printable.cpp  Printable.h  TODO.md  color.h  console_text.h  enums.h  main.cpp  utils.h
chess_pieces/: Bishop.cpp  Bishop.h  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  direction.cpp  direction.h
playground/: Board.cpp  Board.h  Field.cpp  Field.h
